--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2021"
 [dependencies]
 rand = "0.9.0"
 rand_chacha = "0.9.0"
-nohash-hasher = "0.2"
+nohash-hasher = "0.2.0"
+lru = "0.14.0"
+
+[profile.dev]
+opt-level = 1 # slight optimizations
+
+[profile.release]
+opt-level = 3 # maximum optimizations
